2012-05-21  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/53366
	* tree-vect-slp.c (vect_supported_load_permutation_p): Don't shortcut
	tests if complex_numbers == 2, but there are non-complex number loads
	too.

	PR tree-optimization/53409
	* tree-vect-loop.c (vect_analyze_loop_operations): Don't check
	vinfo_for_stmt (op_def_stmt) if op_def_stmt isn't inside loop.

	PR tree-optimization/53410
	* fold-const.c (fold_binary_loc): Use build_zero_cst (type)
	instead of build_int_cst (type, 0) where vector types might be
	involved.

2012-05-21  Joseph Myers  <joseph@codesourcery.com>

	PR c/53418
	* c-typeck.c (build_conditional_expr): Remove C_MAYBE_CONST_EXPR
	from folded operands before wrapping another around the
	conditional expression.

2012-05-21  Dave Boutcher  <daveboutcher@gmail.com>
	    Patrick Marlier  <patrick.marlier@gmail.com>

	* trans-mem.c (ipa_tm_transform_clone): Transform functions with
	indirect calls.

2012-05-21  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2012-05-21  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/53416
	* config/i386/i386.md (UNSPEC_RDRAND): Renamed to ...
	(UNSPECV_RDRAND): This.
	(rdrand<mode>_1): Updated.

2012-05-20  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2012-05-20  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/driver-i386.c (host_detect_local_cpu): Support
	RDRND, F16C and FSGSBASE.

2012-05-19  Eric Botcazou  <ebotcazou@adacore.com>

	Backport from mainline
	2012-05-14  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-ssa-pre.c (can_value_number_call): Delete.
	(compute_avail): Skip all statements with side effects.
	<GIMPLE_CALL>: Skip calls to internal functions.

2012-05-18  David S. Miller  <davem@davemloft.net>

	Backport r185385 from mainline
	2012-03-14  Richard Guenther  <rguenther@suse.de>

	PR middle-end/52584
	* tree-vect-generic.c (type_for_widest_vector_mode): Take
	element type instead of mode, use build_vector_type_for_mode