@@ -1,5 +1,9 @@
 2012-05-21  Jakub Jelinek  <jakub@redhat.com>
 
+	PR tree-optimization/53436
+	* omp-low.c (omp_build_component_ref): New function.
+	(build_receiver_ref, build_sender_ref, create_task_copyfn): Use it.
+
 	PR tree-optimization/53366
 	* tree-vect-slp.c (vect_supported_load_permutation_p): Don't shortcut
 	tests if complex_numbers == 2, but there are non-complex number loads
